[FIX] # Fix Error, change timestamps false

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
     "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "weeknumber": "^1.1.2"
   }
 }
